rocketchat/Deployment-rocket.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rocketchat
  labels:
    app: rocketchat
spec:
  replicas: 3
  selector:
    matchLabels:
      app: rocketchat
  template:
    metadata:
      labels:
        app: rocketchat
    spec:
      containers:
        - name: rocketchat
          image: rocket.chat:2.4.9
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            requests:
              cpu: 100m
      restartPolicy: Always
