rocketchat/Route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: rocket-chat
spec:
  port:
    targetPort: 5000
  to:
    kind: Service
    name: rocket-chat
    weight: 100
  wildcardPolicy: None
